Closed Bug 116044 Opened 23 years ago Closed 23 years ago

reply looks like fwd inline?

Categories

(MailNews Core :: Composition, defect, P2)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: sspitzer, Assigned: bugzilla)

References

Details

(Keywords: regression)

Attachments

(2 files)

reply looks like fwd inline? let me give you a screen shot.
also note how "To:" is quoted twice. note, this may be related to #116022 which is the crash I get when trying to delete the extra header goop from the reply body.
Severity: normal → major
Which build are you using? We got this problem a while ago and has been fixed since!
I am using build 2001-12-18-06 on win98. Reply does not include any header information just the body of the message. Is this on today's builds?
I tried reproducing with HTML mail on using an IMAP account on today's build: worksforme. 2001-12-18-03, Windows 98.
I'm using a build from this morning, my own debug build build.
I'll double check which one I'm using, and try a nightly.
*** Bug 116051 has been marked as a duplicate of this bug. ***
Last time we got this problem it was cause by a problem with setting the query part of an url.
I'm seeing this on commercial builds: linux 2001-12-19-08-trunk mac 2001-12-19-11-trunk
OS: Windows 2000 → All
Hardware: PC → All
This is a regression caused by my checkin early this morning! I'll attach a patch soon...
Status: NEW → ASSIGNED
Keywords: regression
Target Milestone: --- → mozilla0.9.8
Whiteboard: Have fix
Attached patch Prposed fix, v1Splinter Review
I cannot call SetMimeOutputType() to initialize mMimeOutputType before we execute the Init because it set the variable mAlreadyKnowOutputType to true wich cause the Init function to not call DetermineOutputFormat which if the function that retreive the query part of the URL mime is processing!
*** Bug 116338 has been marked as a duplicate of this bug. ***
for those that want more examples, they are in the newsgroups too.. see n.p.m.mail-news group.. using last couple nightlies.
Comment on attachment 62239 [details] [diff] [review] Prposed fix, v1 r=cavin.
Attachment #62239 - Flags: review+
Comment on attachment 62239 [details] [diff] [review] Prposed fix, v1 sr=sspitzer
Attachment #62239 - Flags: superreview+
Fixed and checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified fixed on commercial builds: win 2001-12-26-06-trunk linux 2001-12-26-06-trunk mac 2001-12-26-04-trunk
Status: RESOLVED → VERIFIED
Win98SE 2002011604 Guess what ?? It's baaaack ... But only in a newspost reply, not in email.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
More ... Really strange now. The ONLY server effected is msnews.microsoft.com as all others do not exhibit this bug.
an example of this is: go to msnews.microsoft.com subscribe to microsoft.public.msdn.magazine put yourself in threaded mode. Look for the 1/7/2002 6:22am message from MATEUSZ Z. titled "o grach" Display it and then reply to it and you'll see this.
Priority: -- → P2
Target Milestone: mozilla0.9.8 → mozilla0.9.9
Seems to be mysteriously "fixed" in this morning's build 2002011703 as I cannot dup in any group on the msnews server.
Whiteboard: Have fix
I'm still seeing this in the 2002011703 build.
Keywords: nsbeta1+
This should be an 0.9.8 blocker. I just tested, and this affects the latest branch build. Certain posts will always show this problem when you try to reply, and when you try to delete the header junk, it will crash.
Raising priority for discoverability. Can someone give an easy way to reproduce this?
Severity: major → critical
was this related to bug 116022? Bug 124222 is now reported w/2002020703 - with the old steps to reproduce the crash.
Did this get fixed by 120502? Seth fixed this and it occurred on the same newsgroups.
It's easier to see the problem using an html compose window (like in the dump screen)
the problem was cause by the fact the message id contains a "#". The fix for bug 120502 fixes this problem as well. Closing again.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
QA Contact: sheelar → laurel
OK using feb21 commercial trunk: win98, mac OS 10.1, linux rh6.2
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: