FIx for bug 116044, Cannot call SetMimeOutputType() before calling Init(). R=cavin, SR=sspitzer